--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
   
     
     <div class="col-lg-6 col-sm-6 col-11 skill wow fadeInUp" data-wow-duration="1.5s">
-      <span class="skillbar-title">CISSP  CEH  ITIL  CCSP</span>
+      <span class="skillbar-title">CISSP | CEH | ITIL | CCSP</span>
       <ul class="list-group list-group-horizontal">
       
         <li class="list-group-item">CISSP</li>
