Added Pentest Skill
Also updated description of site

--- a/index.html
+++ b/index.html
@@ -309,6 +309,14 @@
         </div>
         
         <div class="clearfix">
+          <span class="skillbar-title">Penetration Testing</span>
+          <span class="skill-bar-percent"></span>
+          <div class="skillbar" data-percent="90%">
+            <div class="skillbar-bar"></div>
+          </div>
+        </div>
+        
+        <div class="clearfix">
           <span class="skillbar-title">Risk Assessment</span>
           <span class="skill-bar-percent"></span>
           <div class="skillbar" data-percent="90%">
@@ -319,7 +327,7 @@
         <div class="clearfix">
           <span class="skillbar-title">Firewall Management</span>
           <span class="skill-bar-percent"></span>
-          <div class="skillbar" data-percent="90%">
+          <div class="skillbar" data-percent="80%">
             <div class="skillbar-bar"></div>
           </div>
         </div>
