--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
               <div class="help-block with-errors"></div>
             </div>
             <div class="form-group col-lg-6">
-              <input class="form-control" type="email" id="email" name="email" placeholder="Email" required>
+              <input class="form-control" type="email" id="email" name="_replyto" placeholder="Email" required>
               <div class="help-block with-errors"></div>
             </div>
             <div class="form-group col-lg-12">
